ci(pre-commit): configure custom commit messages and fix codespell args
Add custom commit message templates for pre-commit.ci autofix and
autoupdate operations. Remove trailing space from codespell args.

Signed-off-by: Marcelo Borges <git@marceloborges.dev>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,14 @@
+ci:
+  autofix_commit_msg: |
+    chore(pre-commit): apply automatic fixes
+
+    Auto-generated commit from pre-commit.ci.
+    See https://pre-commit.ci for details.
+  autoupdate_commit_msg: |
+    chore(pre-commit): update pre-commit hooks
+
+    Auto-update pre-commit hooks to the latest compatible versions.
+    See https://pre-commit.ci for details.
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
@@ -17,7 +28,7 @@ repos:
     rev: v2.4.1
     hooks:
       - id: codespell
-        args: ["--ignore-words", ".codespellignore" ]
+        args: ["--ignore-words", ".codespellignore"]
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.28.0
     hooks:
